Updates for archipelago plex

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -34,12 +34,13 @@
     - { role: archipelago-nginx, tags: nginx }
 #    - { role: archipelago-orion, tags: orion }
     - water-gkhs-filebot
+    - millpond-flexget
+    - millpond-b2-backup
   tasks:
     - user: name={{ item }} groups=docker append=yes
       with_items:
        - aquarion
        - ccooke
-
 
 - hosts: millpond.water.gkhs.net
   vars:
@@ -49,54 +50,10 @@
     - millpond-packages
     - millpond-users
     - millpond-mount-media
-    - millpond-b2-backup
     - plexupdate
     - retort
     - ansible-homebridge
     - water-gkhs-filebot
-
-- hosts: caisson.water.gkhs.net
-  vars:
-    hostname: caisson.water.gkhs.net
-  become: yes
-  roles:
-    - ansible-nordvpn
-
-- hosts: caisson.water.gkhs.net
-  become: yes
-  tasks:
-    - name: "Transmission: check for installation"
-      register: transmission_bin
-      stat: path="/usr/bin/transmission-cli"
-    - name: installing repo for Java 8 in Ubuntu
-      apt_repository: repo='ppa:openjdk-r/ppa'
-
-- hosts: caisson.water.gkhs.net
-  become: yes
-  roles:
-    - role: millpond-flexget
-    - role: geerlingguy.java
-      java_packages:
-        - openjdk-8-jdk
-    - role: elboletaire.transmission
-      when: not transmission_bin.stat.exists
-      become: yes
-    - role: ansible-get-external-ip-via-dyndns
-  tasks:
-   # Clear up Transmission permissions
-   - file: group=debian-transmission mode=g+wx path=/var/lib/plexserver/Torrential/Progress
-   - file: group=debian-transmission mode=g+wx path=/var/lib/plexserver/Torrential/Complete
-   - user: name=debian-tranmission groups=plex append=yes
-   - user: name=plex groups=debian-tranmission append=yes
-   - name: Add or modify ansible.example.org A to 192.168.1.1"
-     nsupdate:
-       key_name: "{{ dyndns_name }}"
-       key_secret: "{{ dyndns_secret }}"
-       server: "update.dyndns.com"
-       zone: "{{ dyndns_domain }}"
-       record: "{{ dyndns_host }}"
-       value: "{{ external_ip }}"
-
 
 # Non-authenticated tasks
 - hosts: all:!localactions
