Moving plex to archipelago

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -50,7 +50,7 @@
     - millpond-packages
     - millpond-users
     - millpond-mount-media
-    - plexupdate
+    - plexupdate-uninstall
     - retort
     - ansible-homebridge
     - water-gkhs-filebot
