--- a/ansible/roles/aws-aqcom-dns/tasks/carcosadreams.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/carcosadreams.yml
@@ -161,11 +161,25 @@
   tags:
     - carcosadreams
 
+- name: alba.narrative.carcosadreams.com. - A
+  route53:
+      overwrite: true
+      command: "create"
+      zone: "carcosadreams.com"
+      record: "alba.narrative.carcosadreams.com."
+      type: "A"
+      ttl: "300"
+      value: '{{ ansible_default_ipv4.address }}'
+      aws_access_key: '{{istic_aws_key}}'
+      aws_secret_key: '{{istic_aws_secret}}'
+  tags:
+    - carcosadreams
+
 
 - name: wiki.carcosadreams.co.uk. - A
   route53:
       overwrite: true
-      command: "create"
+      command: "delete"
       zone: "carcosadreams.co.uk"
       record: "wiki.carcosadreams.co.uk."
       type: "A"
