--- a/ansible/roles/aws-aqcom-dns/tasks/camlarp.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/camlarp.yml
@@ -10,7 +10,7 @@
       aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
-      value: '109.74.192.161'
+      value: '{{ cenote_ip }}'
 
 
 - name: camlarp.co.uk. - NS
@@ -48,7 +48,7 @@
       aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
-      value: '109.74.192.161'
+      value: '{{ cenote_ip }}'
 
 
 
@@ -62,7 +62,7 @@
       aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
-      value: '109.74.192.161'
+      value: '{{ cenote_ip }}'
 
 
 
@@ -76,7 +76,7 @@
       aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
-      value: '109.74.192.161'
+      value: '{{ cenote_ip }}'
 
 
 
@@ -90,7 +90,7 @@
       aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
-      value: '109.74.192.161'
+      value: '{{ cenote_ip }}'
 
 
 
@@ -104,7 +104,7 @@
       aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
-      value: '109.74.192.161'
+      value: '{{ cenote_ip }}'
 
 
 
@@ -118,7 +118,7 @@
       aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
-      value: '109.74.192.161'
+      value: '{{ cenote_ip }}'
 
 
 
@@ -132,5 +132,5 @@
       aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
-      value: '109.74.192.161'
+      value: '{{ cenote_ip }}'
 
