--- a/ansible/roles/aws-aqcom-dns/tasks/ludoistic.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/ludoistic.yml
@@ -11,7 +11,7 @@
       record: "ludoistic.com."
       type: "A"
       ttl: "300"
-      value: '{{ ansible_default_ipv4.address }}'
+      value: '{{ archipelago_ip }}'
       aws_access_key: '{{istic_aws_key}}'
       aws_secret_key: '{{istic_aws_secret}}'
   tags:
