--- a/ansible/roles/aws-aqcom-dns/tasks/warehouse.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/warehouse.yml
@@ -10,7 +10,7 @@
       aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
-      value: '138.201.60.152'
+      value: '{{ archipelago_ip }}'
 
 
 
