Switch out mysql for maria universally

--- a/ansible/roles/archipelago-packages/tasks/main.yml
+++ b/ansible/roles/archipelago-packages/tasks/main.yml
@@ -3,6 +3,6 @@
 - name: Install Application Packages
   apt: pkg={{ item }} state=installed
   with_items:
-    - mysql-server
+    - mariadb-server
     - irssi
     - exim4
