--- a/ansible/roles/water-gkhs-mysql-backup/tasks/main.yml
+++ b/ansible/roles/water-gkhs-mysql-backup/tasks/main.yml
@@ -2,7 +2,7 @@
 # Install Mysql
 
 - apt: name=python-mysqldb state=present
-- apt: name=mysql-server state=present
+- apt: name=mariadb-server state=present
 
 # Set root password
 - mysql_user: name=root password={{mysql_root_password}} check_implicit_admin=yes
