--- a/ansible/roles/water-gkhs-packages/tasks/main.yml
+++ b/ansible/roles/water-gkhs-packages/tasks/main.yml
@@ -45,14 +45,45 @@
       - moreutils
       - rzip
 
-- apt_repository:
+- name: Install Debian Backports
+  apt_repository:
     repo: deb http://ftp.debian.org/debian stretch-backports main
     state: present
     filename: 'stretch-backports'
   when: ansible_distribution == 'Debian'
 
-- name: Install backported packages
-  apt: pkg={{ item }} state=installed default_release=stretch-backports
+- name: Install ubuntu packages
+  apt: pkg={{ item }} state=present
+  with_items:
+    - software-properties-common
+  when: ansible_distribution == 'Ubuntu'
+  tags:
+    - certbot
+
+- name: Enable universe repository
+  when: ansible_distribution == 'Ubuntu'
+  apt_repository:
+    repo: "{{ item }}"
+  loop:
+    - "deb http://archive.ubuntu.com/ubuntu/ bionic universe"
+    - "deb http://archive.ubuntu.com/ubuntu/ bionic-updates universe"
+    - "deb http://security.ubuntu.com/ubuntu/ bionic-security universe"
+  tags:
+    - certbot
+
+- name: Install Ubuntu Certbot Repo
+  apt_repository:
+    repo: ppa:certbot/certbot
+  when: ansible_distribution == 'Ubuntu'
+  tags:
+    - certbot
+
+- name: Install ubuntu packages
+  apt: pkg={{ item }} state=present
   with_items:
     - certbot
-  when: ansible_distribution == 'Debian'
+    - python-certbot-nginx
+  when: ansible_distribution == 'Ubuntu'
+  tags:
+    - certbot
+
