--- a/ansible/roles/aws-aqcom-dns/tasks/foipme.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/foipme.yml
@@ -52,6 +52,18 @@
       ttl: "300"
       value: '{{ archipelago_ip }}'
 
+- name: sands.foip.me. - A
+  route53:
+      overwrite: true
+      command: "create"
+      zone: "foip.me"
+      record: "sands.foip.me."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
+      type: "A"
+      ttl: "300"
+      value: '{{ archipelago_ip }}'
+
 - name: strangelrp.foip.me. - A
   route53:
       overwrite: true
