Updates to remove warnings

--- a/ansible/roles/water-gkhs-listchanges/tasks/main.yml
+++ b/ansible/roles/water-gkhs-listchanges/tasks/main.yml
@@ -1,9 +1,7 @@
 
 
 - name: Install System Packages
-  apt: pkg={{ item }} state=installed
-  with_items:
-    - apt-listchanges
+  apt: pkg=apt-listchanges state=present
   tags:
     - listchanges
 
