--- a/ansible/roles/water-gkhs-nginx/tasks/main.yml
+++ b/ansible/roles/water-gkhs-nginx/tasks/main.yml
@@ -12,6 +12,7 @@
   template: 
     src: letsencrypt.conf.j2 
     dest: /etc/nginx/snippets/foipme.conf
+    when: "'archipelago' in inventory_hostname"
   vars:
     cert_id: "foip.me"
 
@@ -19,6 +20,7 @@
   template: 
     src: letsencrypt.conf.j2 
     dest: /etc/nginx/snippets/istic.conf
+    when: "'archipelago' in inventory_hostname"
   vars:
     cert_id: "istic.net-0001"
 
